fix gap bug appearing only in chrome

--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,4 +1,5 @@
 
+
 body {
     font-family: 'Playwrite AU TAS', Helvetica, sans-serif;
     margin: 0;
@@ -16,7 +17,6 @@ header {
 
 footer {
     display: flex;
-    font-weight: 800;
     color: #247245;
     justify-content: center;
     align-items: center;
@@ -30,10 +30,14 @@ footer a i {
     font-size: 20px; 
     margin-right: 4px; 
     color: #247245;
+    text-decoration: none;
+    list-style: none;
 }
 
 footer a:visited {
     color: #30975b6c;
+    text-decoration: none;
+    list-style: none;
 }
 
 nav {
@@ -45,7 +49,7 @@ nav {
 button {
     padding: 2px;
     font-size: 2rem;
-    font-weight: 200;
+    font-weight: 100;
     border: none;
     background: transparent;
     cursor: pointer;
@@ -72,6 +76,7 @@ button:hover {
     background-position: center center;
     background-attachment: fixed;
     overflow: hidden;
+    gap: 50px;
 }
 
 .home-title {
@@ -97,20 +102,13 @@ button:hover {
     align-self: center;
     overflow: hidden;
     border-radius: 1em;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
     user-select: none;
     background-color: #ffffffdd;
     padding-left: 100%;
     padding-right: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
-}
-
-.home-img:hover {
-    overflow: hidden;
-    transition: all .2s ease;
-    vertical-align: middle;
-    transform: scale(1.1);
 }
 
 .home-description {
